--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.36.0
-pandas==2.2.2
-numpy==1.26.4
+numpy>=2.1,<3
+pandas>=2.3,<3
 requests==2.32.3
 pulp==2.8.0
 python-dateutil==2.9.0.post0
