--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ pandas>=2.3,<3
 requests==2.32.3
 pulp==2.8.0
 python-dateutil==2.9.0.post0
+feedparser==6.0.11
+vaderSentiment==3.3.2
+rapidfuzz==3.9.6
+beautifulsoup4==4.12.3
+praw==7.7.1
