--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
-
 streamlit==1.32.2
 blinker==1.7.0
+rich==13.7.1
 numpy>=2.1,<3
 pandas>=2.3,<3
-requests==2.32.3
-pulp==2.8.0
 python-dateutil==2.9.0.post0
+requests==2.32.3
+beautifulsoup4==4.12.3
+lxml==5.2.2
+pulp==2.8.0
 feedparser==6.0.11
 vaderSentiment==3.3.2
 rapidfuzz==3.9.6
-beautifulsoup4==4.12.3
 praw==7.7.1
+html5lib==1.1
+fake-useragent==1.5.1
+scikit-learn==1.5.2
+joblib==1.4.2
