--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
-streamlit==1.32.2
-blinker==1.7.0
+# UI/runtime
+streamlit==1.36.0
 rich==13.7.1
+blinker>=1.7,<2
+
+# Data
 numpy>=2.1,<3
 pandas>=2.3,<3
 python-dateutil==2.9.0.post0
+
+# HTTP & parsing
 requests==2.32.3
 beautifulsoup4==4.12.3
 lxml==5.2.2
+html5lib==1.1
+fake-useragent==1.5.1
+
+# Optimizer
 pulp==2.8.0
+
+# Feeds / NLP-ish
 feedparser==6.0.11
 vaderSentiment==3.3.2
 rapidfuzz==3.9.6
+
+# Reddit
 praw==7.7.1
-html5lib==1.1
-fake-useragent==1.5.1
+
+# Optional ML
 scikit-learn==1.5.2
 joblib==1.4.2
